--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         <TextView
             android:id="@+id/titleView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:text="Title"
@@ -25,9 +25,8 @@
             android:id="@+id/imageView"
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
             android:src="@drawable/ic_menu_share"
-            android:tint="#eeeeee"
+            android:tint="#F1E0D8"
             />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
