--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -6,7 +6,7 @@
 android:padding="25dp">
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:text="Second Activity"
+              android:text="@string/text_second_activity"
               android:textSize="35sp"
               android:layout_gravity="center_horizontal"
     />
@@ -14,6 +14,6 @@ android:padding="25dp">
         android:id="@+id/btnFirstActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="First Activity"/>
+        android:text="@string/btn_first_activity"/>
 
 </LinearLayout>
