--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
     <EditText
             android:id="@+id/editMessage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+    android:hint="Enter any message"/>
 
     <Button
             android:layout_width="359dp"
